--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -13,6 +13,20 @@
   <%= @document.uploaded_by_id %>
 </p>
 
+  <% @document.segments.each do |s| %>
+<table cellpadding="0" cellspacing="0" style="border:1px solid #CCC;width:100%">
+    <tr> <td colspan="4" style="border:1px solid #eee"><%=s.source_content %></td></tr>
+    <tr> <td colspan="4" style="border:1px solid #eee"><%=s.target_content %></td></tr>
+    <tr> <td colspan="4" style="border:1px solid #eee"><%=s.prop %></td></tr>
+    <tr>
+      <td  style="border:1px solid #eee" ><%=s.creationid %></td>
+      <td style="border:1px solid #eee"><%=s.creationdate %></td>
+      <td style="border:1px solid #eee"><%=s.changeid %></td>
+      <td style="border:1px solid #eee"><%=s.changedate %></td>
+    </tr>
+  </table>
+  <% end %>
+
 <p>
   <%= link_to "Edit", edit_document_path(@document) %> |
   <%= link_to "Destroy", @document, :confirm => 'Are you sure?', :method => :delete %> |
